# droneproject

./: Eindpresentatie - Rob van Steene.pptx  FB Messenger Comm w Scanse.io.docx  Opdract-definitie Project Inspectie Drone.docx  Oplevering Agenda.docx
Ontwerp/: Architectuur.vsdx
Plan van Aanpak/: Ineiding project drone V2 .docx  Inleiding project drone - niet af.docx  Plan van Aanpak Project Inspectie Drone v0.1.docx  Plan van Aanpak Project Inspectie Drone v0.2.docx  Plan van Aanpak Project Inspectie Drone v0.3.docx  Plan van Aanpak Project Inspectie Drone v0.4.docx  Plan van Aanpak Project Inspectie Drone v1.0.docx  Project begrenzing.docx  Project doel.docx  Risico analyse.docx
Planning/: Planning Inspectie Drone.xlsx  Planning Inspectie Drone.xlsx.gsheet  Samenvatting van alles wat we wel en niet tot 07_03_2017 hebben gedaan.gdoc  Wrap-Up Project Drone 20_04_2017.gdoc
Presentaties/: Oplevering Presentatie.pptx  Pitch Week 3.pptx  Pitch Week 6.pptx
Programma van Eisen/: Programma van Eisen Inspectie Drone v1.0.docx  Programma van Eisen Inspectie Drone v1.2.docx  Programma van Eisen Inspectie Drone v1.4.docx
Software/SLAM/test/MRPTTest/: CMakeLists.txt  main.cpp
Verslag/: Aanbeveling & conclusie.docx  Inleiding.docx  Lidar tests.docx  Manifold - Sweep sdk.docx  Onderzoek LIDAR.docx  QT - V0.1.docx  SSL - V0.1.docx  Verslag Inspectie Drone V0.1.docx  Verslag Inspectie Drone V0.2.docx  Verslag Inspectie Drone V1.0.docx  Verslag Inspectie Drone V1.2.docx  Verslag Inspectie Drone V1.3.docx  Verslag Inspectie Drone V1.4.docx  Verslag Inspectie Drone V1.5.docx  (+5 more)
(+30 files in other folders)
